--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="bottom">
                         <p><b>Instagram</b></p>
                         <p>Bringing you closer to the people and things you love. <img width="20px" height="20px" src="./assets/heart.png" alt="Heart Image"></p>
-                        <p><b>help.instagram.com</b></p>
+                        <p><b>help.instagram.com</b></p><br>
                         <p>followed by <b>thedailyshow</b> and <b>kevin</b></p>
                     </div>
     
